force-app/main/default/objects/DevAssist_Metadata__mdt/DevAssist_Metadata__mdt.object-meta.xml
<CustomObject>
    <description>Used to track the success/failures of org brix to be surfaced in the DevAssist LWC</description>
    <label>DevAssist Metadata</label>
    <pluralLabel>DevAssist Metadata</pluralLabel>
</CustomObject>