force-app/main/default/objects/DevAssist_Metadata__mdt/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>Optional picklist used to narrow down the place where the DevAssist component displays</description>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LWC</fullName>
                <default>true</default>
                <label>LWC</label>
            </value>
            <value>
                <fullName>Flexipage</fullName>
            </value>
            <value>
                <fullName>Omniscript</fullName>
            </value>
            <value>
                <fullName>Flexcard</fullName>
            </value>
            <value>
                <fullName>CRMA</fullName>
            </value>
            <value>
                <fullName>Timeline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>