force-app/main/default/objects/DevAssist_Metadata__mdt/fields/Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Developer_Name__c</fullName>
    <description>Developer name of the asset (e.g., MyFlexipage)</description>
    <label>Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>