force-app/main/default/objects/DevAssist_Metadata__mdt/fields/GitHub_File_Path__c.field-meta.xml
<CustomField>
    <fullName>GitHub_File_Path__c</fullName>
    <description>Path to the metadata file (e.g. &quot;/QBrix-3-EDU-AI-Advising-Case-Summary/blob/main/force-app/main/default/objects/BenefitAssignment/BenefitAssignment.object-meta.xml&quot;)</description>
    <label>GitHub File Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>