force-app/main/default/objects/DevAssist_Metadata__mdt/fields/GitHub_File_URL__c.field-meta.xml
<CustomField>
    <fullName>GitHub_File_URL__c</fullName>
    <description>Full URL for the GitHub file (e.g. &quot;https://github.dev/sfdc-qbranch-emu/QBrix-3-EDU-AI-Advising-Case-Summary/blob/main/force-app/main/default/objects/BenefitAssignment/BenefitAssignment.object-meta.xml&quot;)</description>
    <label>GitHub File URL</label>
    <type>Url</type>
</CustomField>