force-app/main/default/objects/DevAssist_Metadata__mdt/fields/Last_Commit_Sha__c.field-meta.xml
<CustomField>
    <fullName>Last_Commit_Sha__c</fullName>
    <label>Last Commit Sha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>