force-app/main/default/objects/DevAssist_Metadata__mdt/fields/Last_Deployed_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Deployed_By__c</fullName>
    <label>Last Deployed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>