force-app/main/default/objects/DevAssist_Metadata__mdt/fields/Repo_Name__c.field-meta.xml
<CustomField>
    <fullName>Repo_Name__c</fullName>
    <label>Repo Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>