force-app/main/default/objects/DevAssist_Metadata__mdt/fields/Repo_Owner__c.field-meta.xml
<CustomField>
    <fullName>Repo_Owner__c</fullName>
    <label>Repo Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>