force-app/main/default/objects/DevAssist_Metadata__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Identifies whether the most recent deployment is from the metadata defined in the org template or in a post-spin run</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Template</fullName>
                <default>true</default>
                <label>Template</label>
            </value>
            <value>
                <fullName>Post-Spin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>