force-app/main/default/objects/DevAssist_Metadata__mdt/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <description>Name of the brix task</description>
    <label>Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>